tests/samples/negative/pattern_matching/slice_pattern_non_slice.ax
module slice_pattern_non_slice;

fn main() -> i32 {
    let value = 1;
    if value is [] {
        return 1;
    }
    return 0;
}
